creates block feedback

--- a/source/index.html
+++ b/source/index.html
@@ -182,7 +182,8 @@
           <picture>
             <source media="(max-width: 767px)" srcset="img/production-mob@2x.jpg 2x, img/production-mob.jpg 1x">
             <source media="(max-width: 1023px)" srcset="img/production-tabl@2x.jpg 2x, img/production-tabl.jpg 1x">
-            <img class="product__img" src="img/production-desk.jpg" srcset="img/production-desk@2x.jpg 2x" alt="Производство">
+            <img class="product__img" src="img/production-desk.jpg" srcset="img/production-desk@2x.jpg 2x"
+                  alt="Производство">
           </picture>
           <p class="product__description">Производство печатных плат</p>
         </li>
@@ -200,7 +201,8 @@
           <picture>
             <source media="(max-width: 767px)" srcset="img/components-mob@2x.jpg 2x, img/components-mob.jpg 1x">
             <source media="(max-width: 1023px)" srcset="img/components-tabl@2x.jpg 2x, img/components-tabl.jpg 1x">
-            <img class="product__img" src="img/components-desk.jpg" srcset="img/components-desk@2x.jpg 2x" alt="Комплектующие">
+            <img class="product__img" src="img/components-desk.jpg" srcset="img/components-desk@2x.jpg 2x"
+                  alt="Комплектующие">
           </picture>
           <p class="product__description">Комплектующие для светотехники</p>
         </li>
@@ -208,25 +210,34 @@
     </div>
   </section>
   <section class="feedback" id="feedback">
-    <h2 class="feedback__title">Остались вопросы? Задайте их нам!</h2>
-    <p class="feedback__info">Мы проконсультируем Вас бесплатно</p>
-    <form class="feedback__form" method="GET">
-      <label class="feedback__text-label visually-hidden" for="feedback-name">Имя</label>
-      <input type="text" name="name" id="feedback-name" placeholder="Имя" autocomplete="on" required="">
-
-      <label class="feedback__text-label visually-hidden" for="feedback-tel">Телефон</label>
-      <input type="tel" pattern="\+7\([0-9]{3}\)[0-9]{3}-[0-9]{2}-[0-9]{2}" name="tel" id="feedback-tel"
-              placeholder="Телефон" autocomplete="on" required="">
-
-      <label class="feedback__text-label visually-hidden" for="feedback-message">Сообщение</label>
-      <textarea name="message" id="feedback-message" placeholder="Ваш вопрос" required=""></textarea>
-
-      <button class="feedback__form-btn" type="submit">Задать вопрос</button>
-      <div class="feedback__form-group">
-        <input id="checkbox" type="checkbox" checked="">
-        <label for="checkbox">Я согласен на обработку персональных данных</label>
+    <div class="feedback__wrapper container">
+      <div class="feedback__img">
+        <picture>
+          <img src="img/airplane.png" srcset="img/airplane@2x.png 2x" alt="Самолет">
+        </picture>
       </div>
-    </form>
+      <div class="feedback__form-wrapper">
+        <h2 class="feedback__title">Остались вопросы? Задайте их нам!</h2>
+        <p class="feedback__info">Мы проконсультируем Вас бесплатно</p>
+        <form class="feedback__form" method="GET">
+          <label class="feedback__text-label visually-hidden" for="feedback-name">Имя</label>
+          <input type="text" name="name" id="feedback-name" placeholder="Имя" autocomplete="on" required="">
+
+          <label class="feedback__text-label visually-hidden" for="feedback-tel">Телефон</label>
+          <input type="tel" pattern="\+7\([0-9]{3}\)[0-9]{3}-[0-9]{2}-[0-9]{2}" name="tel" id="feedback-tel"
+                  placeholder="Телефон" autocomplete="on" required="">
+
+          <label class="feedback__text-label visually-hidden" for="feedback-message">Сообщение</label>
+          <textarea name="message" id="feedback-message" placeholder="Ваш вопрос" required=""></textarea>
+
+          <button class="feedback__form-btn" type="submit">Задать вопрос</button>
+          <div class="feedback__form-group">
+            <input id="checkbox" type="checkbox" checked="">
+            <label for="checkbox">Я согласен на обработку персональных данных</label>
+          </div>
+        </form>
+      </div>
+    </div>
   </section>
 </main>
 <footer class="page-footer">
