--- a/source/index.html
+++ b/source/index.html
@@ -57,8 +57,10 @@
         <picture>
           <source media="(min-width: 767px)" srcset="img/boards-desk.png 1x, img/boards-desk@2x.png 2x">
           <source type="image/webp" srcset="img/boards-desk@2x.webp 2x, img/boards-desk.webp 1x">
-          <source media="(max-width: 767px)" type="image/webp" srcset="img/boards-mob@2x.webp 2x, img/boards-mob.webp 1x">
-          <img src="img/boards-mob.png" srcset="img/boards-mob.png" srcset="img/boards-mob@2x.png" 2x class="intro-picture__img" alt="Печатные платы Smart Device">
+          <source media="(max-width: 767px)" type="image/webp"
+                  srcset="img/boards-mob@2x.webp 2x, img/boards-mob.webp 1x">
+          <img src="img/boards-mob.png" srcset="img/boards-mob.png" srcset="img/boards-mob@2x.png" 2x
+               class="intro-picture__img" alt="Печатные платы Smart Device">
         </picture>
       </div>
     </section>
@@ -70,7 +72,7 @@
       <h2 class="visually-hidden">Преимущества компании</h2>
       <ul class="advantages__list">
         <li class="advantages__item">
-          <svg class="advantages__icon advantages__icon" width="30" height="37" fill="none">
+          <svg class="advantages__icon advantages__icon--stopwatch" width="30" height="37" fill="none">
             <use xlink:href="#icon-stopwatch"></use>
           </svg>
           <h3 class="advantages__title">Оперативные сроки</h3>
@@ -109,7 +111,7 @@
     <p class="about__info">Мы поставляем электронные комплектующие, производим печатные платы и предоставляем мировые
       технологии с 1997 года. Выполняем срочные заказы и пилотные образцы до 10 дней.
     </p>
-    <p class="about__customers about__customers--desktop">Наши поставщики - мировые производители электронных
+    <p class="about__customers about__customers tablet">Наши поставщики - мировые производители электронных
       компонентов: OSRAM, CREE, HOLGLITRONIC, REFOND. Печатные платы и комплектующие Service Devices применяются на
       предприятиях Российских Железных Дорог (РЖД), РоссАвтоПрома (ВАЗ, АвтоГАЗ), МинАтома, СпецМедТехники. Среди наших
       клиентов крупнейшие Производители светотехники России.</p>
@@ -137,12 +139,14 @@
           <!-- desktop: 1х: 378px; 2x: 756px -->
           <picture>
             <source media="(max-width: 767px)" srcset="img/production-mob@2x.jpg 2x, img/production-mob.jpg 1x">
-            <source media="(max-width: 767px)" type="image/webp" srcset="img/production-mob@2x.webp 2x, img/production-mob.webp 1x">
+            <source media="(max-width: 767px)" type="image/webp"
+                    srcset="img/production-mob@2x.webp 2x, img/production-mob.webp 1x">
             <source media="(max-width: 1023px)" srcset="img/production-tabl@2x.jpg 2x, img/production-tabl.jpg 1x">
-            <source media="(max-width: 1023px)" type="image/webp" srcset="img/production-tabl@2x.webp 2x, img/production-tabl.webp 1x">
+            <source media="(max-width: 1023px)" type="image/webp"
+                    srcset="img/production-tabl@2x.webp 2x, img/production-tabl.webp 1x">
             <source type="image/webp" srcset="img/production-desk@2x.webp 2x, img/production-desk.webp 1x">
             <img class="product__img" src="img/production-desk.jpg" srcset="img/production-desk@2x.jpg 2x"
-                  alt="Производство">
+                 alt="Производство">
           </picture>
           <p class="product__description">Производство печатных плат</p>
         </li>
@@ -150,9 +154,11 @@
           <a class="product__link" href="#"></a>
           <picture>
             <source media="(max-width: 767px)" srcset="img/mounting-mob@2x.jpg 2x, img/mounting-mob.jpg 1x">
-            <source media="(max-width: 767px)" type="image/webp" srcset="img/mounting-mob@2x.webp 2x, img/mounting-mob.webp 1x">
+            <source media="(max-width: 767px)" type="image/webp"
+                    srcset="img/mounting-mob@2x.webp 2x, img/mounting-mob.webp 1x">
             <source media="(max-width: 1023px)" srcset="img/mounting-tabl@2x.jpg 2x, img/mounting-tabl.jpg 1x">
-            <source media="(max-width: 1023px)" type="image/webp" srcset="img/mounting-tabl@2x.webp 2x, img/mounting-tabl.webp 1x">
+            <source media="(max-width: 1023px)" type="image/webp"
+                    srcset="img/mounting-tabl@2x.webp 2x, img/mounting-tabl.webp 1x">
             <source type="image/webp" srcset="img/mounting-desk@2x.webp 2x, img/mounting-desk.webp 1x">
             <img class="product__img" src="img/mounting-desk.jpg" srcset="img/mounting-desk@2x.jpg 2x" alt="Монтаж">
           </picture>
@@ -162,12 +168,14 @@
           <a class="product__link" href="#"></a>
           <picture>
             <source media="(max-width: 767px)" srcset="img/components-mob@2x.jpg 2x, img/components-mob.jpg 1x">
-            <source media="(max-width: 767px)" type="image/webp" srcset="img/components-mob@2x.webp 2x, img/components-mob.webp 1x">
+            <source media="(max-width: 767px)" type="image/webp"
+                    srcset="img/components-mob@2x.webp 2x, img/components-mob.webp 1x">
             <source media="(max-width: 1023px)" srcset="img/components-tabl@2x.jpg 2x, img/components-tabl.jpg 1x">
-            <source media="(max-width: 1023px)" type="image/webp" srcset="img/components-tabl@2x.webp 2x, img/components-tabl.webp 1x">
+            <source media="(max-width: 1023px)" type="image/webp"
+                    srcset="img/components-tabl@2x.webp 2x, img/components-tabl.webp 1x">
             <source type="image/webp" srcset="img/components-desk@2x.webp 2x, img/components-desk.webp 1x">
             <img class="product__img" src="img/components-desk.jpg" srcset="img/components-desk@2x.jpg 2x"
-                  alt="Комплектующие">
+                 alt="Комплектующие">
           </picture>
           <p class="product__description">Комплектующие для светотехники</p>
         </li>
@@ -192,7 +200,7 @@
 
           <label class="feedback__text-label visually-hidden" for="feedback-tel">Телефон</label>
           <input type="tel" pattern="\+7\([0-9]{3}\)[0-9]{3}-[0-9]{2}-[0-9]{2}" name="tel" id="feedback-tel"
-                  placeholder="Телефон" autocomplete="on" required="">
+                 placeholder="Телефон" autocomplete="on" required="">
 
           <label class="feedback__text-label visually-hidden" for="feedback-message">Сообщение</label>
           <textarea name="message" id="feedback-message" placeholder="Ваш вопрос" required=""></textarea>
@@ -243,7 +251,7 @@
     <div class="page-footer__nav nav">
       <h3 class="nav-title nav-title--closed nav-title--no-js">Разделы сайта</h3>
       <button type="button" class="page-footer__toggle" aria-label="Открыть меню"></button>
-      <ul class="nav__list">
+      <ul class="nav__list menu-closed">
         <li class="nav__item"><a class="nav__link">О компании</a></li>
         <li class="nav__item"><a class="nav__link">Продукты</a></li>
         <li class="nav__item"><a class="nav__link">Производство печатных плат</a></li>
@@ -256,7 +264,7 @@
     <div class="page-footer__content">
       <h3 class="page-footer__title ">Наш офис</h3>
       <button type="button" class="page-footer__toggle" aria-label="Открыть меню"></button>
-      <ul class="page-footer__contacts-list">
+      <ul class="page-footer__contacts-list menu-closed">
         <li class="page-footer__contacts-item"><a>г. Мытищи, Олимпийский проспект, д.10</a></li>
         <li class="page-footer__contacts-item"><a href="tel:+74955894050">+7 (495) 589-40-50</a></li>
         <li class="page-footer__contacts-item"><a href="tel:+79250038767">+7 (925) 003-87-67</a></li>
@@ -273,8 +281,8 @@
     </div>
   </div>
 </footer>
-<section class="overlay" id="modalId">
-  <div class="modal">
+<section class="overlay overlay--close" id="modalId">
+  <div class="modal modal--close">
     <div class="modal__wrapper">
       <button class="modal__close-btn" type="button"></button>
       <h2 class="modal__title">Закажите звонок</h2>
@@ -284,7 +292,7 @@
         <input type="text" name="name-field" id="name-modal" placeholder="Имя" required>
         <label class="modal__text-label visually-hidden" for="phone-modal">Телефон</label>
         <input type="tel" pattern="\+7\([0-9]{3}\)[0-9]{3}-[0-9]{2}-[0-9]{2}" name="phone-field" id="phone-modal"
-                placeholder="Телефон" required>
+               placeholder="Телефон" required>
         <label class="modal__text-label visually-hidden" for="message-modal">Ваш вопрос</label>
         <textarea name="message-field" id="message-modal" placeholder="Ваш вопрос" required></textarea>
         <div class="form__submit">
@@ -298,5 +306,10 @@
     </div>
   </div>
 </section>
+<script>
+  const scriptMain = document.createElement('script')
+  scriptMain.src = 'js/main.js?r=' + Math.random()
+  document.body.appendChild(scriptMain)
+</script>
 </body>
 </html>
