fifes some bugs

--- a/source/index.html
+++ b/source/index.html
@@ -15,11 +15,12 @@
   <div class="page-header__container container container--extra">
     <div class="page-header__wrapper">
       <a class="page-header__logo-link">
-        <img class="page-header__logo-img" src="img/logo.svg" width="52" height="52" alt="Логотип">
-        <div class="page-header__logo-wrapper">
-          <p class="page-header__logo-title">Smart Device</p>
-          <p class="page-header__logo-text">умные технологии</p>
-        </div>
+        <svg class="page-header__logo-img page-header__logo--desktop" width="202" height="52">
+          <use xlink:href="#icon-desk-logo"></use>
+        </svg>
+        <svg class="page-header__logo-img page-header__logo--mobile" width="38" height="38">
+          <use xlink:href="#icon-mob-logo"></use>
+        </svg>
       </a>
       <ul class="page-header__contacts-list">
         <li class="page-header__contacts-item">
@@ -60,7 +61,7 @@
           <source media="(max-width: 767px)" type="image/webp"
                   srcset="img/boards-mob@2x.webp 2x, img/boards-mob.webp 1x">
           <img src="img/boards-mob.png" srcset="img/boards-mob.png" srcset="img/boards-mob@2x.png" 2x
-               class="intro-picture__img" alt="Печатные платы Smart Device">
+                class="intro-picture__img" alt="Печатные платы Smart Device">
         </picture>
       </div>
     </section>
@@ -146,7 +147,7 @@
                     srcset="img/production-tabl@2x.webp 2x, img/production-tabl.webp 1x">
             <source type="image/webp" srcset="img/production-desk@2x.webp 2x, img/production-desk.webp 1x">
             <img class="product__img" src="img/production-desk.jpg" srcset="img/production-desk@2x.jpg 2x"
-                 alt="Производство">
+                  alt="Производство">
           </picture>
           <p class="product__description">Производство печатных плат</p>
         </li>
@@ -175,7 +176,7 @@
                     srcset="img/components-tabl@2x.webp 2x, img/components-tabl.webp 1x">
             <source type="image/webp" srcset="img/components-desk@2x.webp 2x, img/components-desk.webp 1x">
             <img class="product__img" src="img/components-desk.jpg" srcset="img/components-desk@2x.jpg 2x"
-                 alt="Комплектующие">
+                  alt="Комплектующие">
           </picture>
           <p class="product__description">Комплектующие для светотехники</p>
         </li>
@@ -200,7 +201,7 @@
 
           <label class="feedback__text-label visually-hidden" for="feedback-tel">Телефон</label>
           <input type="tel" pattern="\+7\([0-9]{3}\)[0-9]{3}-[0-9]{2}-[0-9]{2}" name="tel" id="feedback-tel"
-                 placeholder="Телефон" autocomplete="on" required="">
+                  placeholder="Телефон" autocomplete="on" required="">
 
           <label class="feedback__text-label visually-hidden" for="feedback-message">Сообщение</label>
           <textarea name="message" id="feedback-message" placeholder="Ваш вопрос" required=""></textarea>
@@ -219,9 +220,9 @@
   <div class="page-footer__wrapper container container--extra">
     <div class="page-footer__logo">
       <a class="page-footer__logo-link">
-        <picture>
-          <img class="page-footer__logo-img" src="img/logo.png" width="224" height="72" alt="Логотип">
-        </picture>
+        <svg class="page-footer__logo-img page-footer__logo--desktop" width="226" height="52">
+          <use xlink:href="#icon-footer-logo"></use>
+        </svg>
       </a>
       <p class="page-footer__copyright-text page-footer__copyright-text--tablet">1999-2018 SD Service Devices</p>
       <ul class="page-footer__social social">
@@ -249,7 +250,7 @@
       </ul>
     </div>
     <div class="page-footer__nav nav">
-      <h3 class="nav-title nav-title--closed nav-title--no-js">Разделы сайта</h3>
+      <h3 class="nav-title nav-title--closed">Разделы сайта</h3>
       <button type="button" class="page-footer__toggle" aria-label="Открыть меню"></button>
       <ul class="nav__list menu-closed">
         <li class="nav__item"><a class="nav__link">О компании</a></li>
@@ -292,7 +293,7 @@
         <input type="text" name="name-field" id="name-modal" placeholder="Имя" required>
         <label class="modal__text-label visually-hidden" for="phone-modal">Телефон</label>
         <input type="tel" pattern="\+7\([0-9]{3}\)[0-9]{3}-[0-9]{2}-[0-9]{2}" name="phone-field" id="phone-modal"
-               placeholder="Телефон" required>
+                placeholder="Телефон" required>
         <label class="modal__text-label visually-hidden" for="message-modal">Ваш вопрос</label>
         <textarea name="message-field" id="message-modal" placeholder="Ваш вопрос" required></textarea>
         <div class="form__submit">
@@ -306,10 +307,6 @@
     </div>
   </div>
 </section>
-<script>
-  const scriptMain = document.createElement('script')
-  scriptMain.src = 'js/main.js?r=' + Math.random()
-  document.body.appendChild(scriptMain)
-</script>
+<script src="js/main.js"></script>
 </body>
 </html>
